restore filters on project list page
